# maa-auto-reverse-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-windows-release.yml
data/: app_settings.ron  presets.ron  strategy_config.ron
src/: app.rs  lib.rs  main.rs
src/domain/: config.rs  engine.rs  image_ops.rs  mod.rs  strategy.rs
src/infra/: hotkey.rs  logging.rs  maa.rs  mod.rs  paths.rs  persistence.rs  win_input.rs  windowing.rs
src/orchestrator/: service.rs
