[package]
name = "maa-auto-reverse-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
global-hotkey = "0.7.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
image = "0.25"
imageproc = "0.25"
maa-framework = { version = "1.12.0", features = ["dynamic", "image"] }
ndarray = "0.16"
once_cell = "1.21"
regex = "1.11"
rfd = "0.15"
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
window-enumerator = "0.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
